--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: Time Machine theme
 description: Time Machine is a theme for GitHub Pages.
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-time-machine
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
